fix: refactor code

--- a/src/app/product-master/form/form.component.html
+++ b/src/app/product-master/form/form.component.html
@@ -1,14 +1,15 @@
-<h3>Add Product</h3>
+<h3>Add / Edit Product</h3>
 
 <form class="form-inline mb-4">
-    <form [formGroup]="productForm" (submit)="createProduct()" class="form-inline mb-4">
+    <form [formGroup]="productForm" (submit)="createUpdateProduct()" class="form-inline mb-4">
         <div class="row">
             <div class="col-lg-4 col-sm-4 col-xs-12">
-                <!-- <input type="file" class="file-upload" formControlName="image"
-                    onchange="console.log(event.target.files)"> -->
+                <div class="preview-image" *ngIf="previewUrl">
+                    <img [src]="previewUrl" alt="Preview">
+                </div>
                 <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload>
-                <div class="file-upload">
-                    {{fileName || "No file uploaded yet."}}
+                <div *ngIf="!productId" class="file-upload">
+                    <div class="small">{{fileName || "No file uploaded yet."}}</div>
                     <button type="button" mat-mini-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
                         Select file
                     </button>
@@ -19,17 +20,25 @@
                 <div class="input-group mb-2 mr-sm-2">
                     <input type="text" class="form-control" formControlName="name" placeholder="name">
                 </div>
-
                 <label class="sr-only" for="Description">Description</label>
                 <div class="input-group mb-2 mr-sm-2">
                     <input type="text" class="form-control" formControlName="description" placeholder="Description">
                 </div>
-
                 <label class="sr-only" for="Price">Price</label>
                 <div class="input-group mb-2 mr-sm-2">
                     <input type="number" min="0" class="form-control" formControlName="price" placeholder="0.00">
                 </div>
+                <label class="sr-only" for="Stock">Stock</label>
+                <div class="input-group mb-2 mr-sm-2">
+                    <input type="number" min="0" class="form-control" formControlName="stock" placeholder="0">
+                </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary mb-2">Add Product</button>
+        <div class="row">
+            <div class="col-12">
+                <button type="submit" class="btn full-width btn-primary mb-2">
+                    {{buttonText}}
+                </button>
+            </div>
+        </div>
     </form>
