--- a/src/app/product-master/product/product.component.html
+++ b/src/app/product-master/product/product.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-    <app-product-add></app-product-add>
+    <app-product-form></app-product-form>
     <app-product-list></app-product-list>
-    <app-product-edit></app-product-edit>
 </div>
